# sports_performance

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DATA_MODEL.md  LICENSE  README.md  SPEC.md  TODO.md  pyproject.toml
.claude/commands/: build.md  discuss.md  fix-review.md  review-data.md  review-di.md  review-security.md  review-tests.md  review-ui.md  review.md  ship.md  test.md
.opencode/agents/: discussion.md  implementation.md  planner.md  reviewer.md  tester.md
resources/: example_sites.md
src/sports_performance/: __init__.py  cli.py
src/sports_performance/analytics/: __init__.py
src/sports_performance/models/: race.py
src/sports_performance/scraper/: __init__.py  raceresult.py  storage.py
tests/: __init__.py  test_cli.py  test_models.py  test_scraper_fetch.py  test_scraper_parser.py  test_storage.py
tests/fixtures/: raceresult_370985_response.json
