[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sports-performance"
version = "0.1.0"
description = "Sports performance analysis tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.1.1",
    "typer>=0.24.2",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
sports-perf = "sports_performance.cli:entrypoint"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
